# kenyon-college-confidential-chatbot

./: README.md  pyproject.toml
Kenyon-Advisor-Wiki/: CLAUDE.md  index.md
Kenyon-Advisor-Wiki/00-Raw-Sources/: advising-resources.md  anthropology.md  art.md  bfec.md  biology.md  career-development.md  cascade-projects.md  catalog-main.md  center-for-innovative-pedagogy.md  chemistry.md  classics.md  dance-drama-film.md  departments.md  economics.md  english.md  environmental-studies.md  history.md  library.md  mathematics.md  modern-languages-and-literatures.md  music.md  neuroscience.md  off-campus-study.md  philosophy.md  physics.md  political-science.md  pre-professional.md  psychology.md  religious-studies.md  research-programs.md  sociology.md
docs/: chat_tech-spec_v1_grok_20260408.md  tech-spec.md  usermanual.md
docs/superpowers/specs/: 2026-04-08-documentation-design.md
src/kenyon_bot/: __init__.py  cli.py  config.py  scraper.py  vault.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_live_scrape.py
tests/unit/: test_config.py  test_scraper.py  test_vault.py
